add njs support

--- a/nginx/1.23.1/alpine/3.16.1/Dockerfile
+++ b/nginx/1.23.1/alpine/3.16.1/Dockerfile
@@ -258,7 +258,8 @@ ARG NGINX_BUILD_DEPS="\
         libxslt-dev \
         linux-headers \
         perl-dev \
-"
+        mercurial \
+    "
 ENV NGINX_BUILD_DEPS=$NGINX_BUILD_DEPS
 
 ####################################
