--- a/nginx/1.23.1/alpine/3.16.1/tpl/Makefile
+++ b/nginx/1.23.1/alpine/3.16.1/tpl/Makefile
@@ -45,10 +45,14 @@ core:
 # DEPENDENCIES
 # ##############################################################################
 
-deps: dep-ngx_devel_kit dep-luajit dep-lua-nginx dep-lua-resty-core dep-lua-resty-lrucache
+deps: dep-ngx_devel_kit dep-luajit dep-lua-nginx dep-lua-resty-core dep-lua-resty-lrucache dep-njs
 ifeq ($(EXTENDED_IMAGE), YES)
 	make dep-headers-more-nginx-module dep-lua-resty-cookie dep-lua-openresty-dns dep-lua-openresty-memcached dep-lua-openresty-mysql dep-lua-openresty-redis dep-lua-openresty-shell dep-lua-openresty-tablepool dep-lua-openresty-signal dep-lua-resty-upstream-healthcheck dep-lua-openresty-websocket dep-lua-upstream-nginx-module dep-nginx-lua-prometheus dep-stream-lua-nginx-module
 endif
+
+dep-njs:
+	mkdir -p /njs
+	hg clone http://hg.nginx.org/njs /njs
 
 # NGX Devel Kit
 # ##############################################################################
